--- a/smurfs/src/sass/index.scss
+++ b/smurfs/src/sass/index.scss
@@ -1,4 +1,5 @@
 @import 'App.scss';
 @import 'Cards.scss';
-@import 'card.scss';
+@import 'Card.scss';
+@import 'Form.scss';
 @import 'global.scss';
